# robocup-at-home-2021-challenge

./: Dockerfile
suturo_launch/: CMakeLists.txt  package.xml
suturo_launch/launch/: execute_order_66.launch
suturo_launch/scripts/: 5_min_killer.py
